--- a/website/site-static/sass/apps/scheduler.sass
+++ b/website/site-static/sass/apps/scheduler.sass
@@ -261,7 +261,10 @@ $theme-4-bright: #f2dacc
     line-height: 1.1
       
       
-      
+.emission.hover
+  cursor: move
+  dl
+    border-right-width: 26px
       
       
 
