reworking scheduler and pypo (api/scripts/calendar-generation)

--- a/website/apps/aplayer/templates/aplayer/_inline.html
+++ b/website/apps/aplayer/templates/aplayer/_inline.html
@@ -1,18 +1,23 @@
 {% load sekizai_tags i18n %}
 
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.li-scroller.1.0.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}
+    <script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.li-scroller.1.0.js"></script>{% endaddtoblock %}
 
 <!-- current version -->
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/base.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/ui.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}
+    <script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/base.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}
+    <script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/ui.js"></script>{% endaddtoblock %}
 
 
 <!-- refactored version -->
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/base_0.2.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}
+    <script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/base_0.2.js"></script>{% endaddtoblock %}
 
 
 <!-- inline version (apears in top navigation)  -->
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/inline.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}
+    <script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/inline.js"></script>{% endaddtoblock %}
 
 
 
@@ -75,16 +80,8 @@
 
         <!-- Icon/Actions-->
         <div class="right shortcuts">
-
-<a href="#" class="streamable popup" data-resource_uri="/api/v1/abcast/channel/1/"><img
+            <a href="#" class="streamable popup" data-resource_uri="/api/v1/abcast/channel/1/"><img
                     src="/static/img/prototype/webstream.png" alt="Webstream"/></a>
-
-
-            <!--
-            <a href="/api/cast/listen.json#0#replace" title="Liten to the livestream" class="playable popup"><img
-                    src="/static/img/prototype/webstream.png" alt="Webstream"/></a>
-            -->
-
 
         </div>
         <div class="clear"></div>
@@ -96,7 +93,7 @@
         <div class="actions">
             <ul class="unstyled horizontal">
 
-                <li>
+                <li class="prev">
                     <a href="#" data-action="prev" title="Previous"> <i class="icon-step-backward"></i> </a>
                 </li>
 
@@ -107,7 +104,7 @@
                     <a href="#" data-action="play" title="Play"> <i class="icon-play"></i> </a>
                 </li>
 
-                <li>
+                <li class="next">
                     <a href="#" data-action="next" title="Next"> <i class="icon-step-forward"></i> </a>
                 </li>
                 <div class="clear"></div>
@@ -142,8 +139,13 @@
             <div class="clear"></div>
         </div>
 
-        <div class="inner">
+        <div class="channel">
+            <strong>On-Air - Live</strong>
+        </div>
 
+
+        <div class="inner">
+        loading
         </div>
     </div>
 
