--- a/website/site-static/sass/apps/_exporter.sass
+++ b/website/site-static/sass/apps/_exporter.sass
@@ -54,6 +54,7 @@ div.listview.export
     .action.download
       a
         color: #a5a5a5
+        color: #a5a5a6
         cursor: wait
 
     &.done, &.downloaded
