--- a/website/site-static/sass/site/_style.sass
+++ b/website/site-static/sass/site/_style.sass
@@ -13,12 +13,14 @@ body
 
   // some typo overrides - just testing...
   h1, h2, h3, h4
-    font-family: "quatro-slab"
+    //font-family: "quatro-slab"
+    font-family: "Times New Roman", Times, serif
     font-weight: 700
     font-style: italic
     color: #5a5a5a
 
   .subhead .icontitle
-    font-family: "quatro-slab"
+    //font-family: "quatro-slab"
+    font-family: "Times New Roman", Times, serif
     font-weight: 700
     font-style: italic
