--- a/website/apps/alibrary/templates/alibrary/element/_tagcloud.html
+++ b/website/apps/alibrary/templates/alibrary/element/_tagcloud.html
@@ -5,37 +5,32 @@
 			
 			
 
-	<!---->
+
 	<ul class="horizontal tag-level unstyled pull-right">
-		
+
+		<li><a class="toggle-level" data-taglevel="1" href="#">&nbsp;+&nbsp;</a></li>
+		<li><a class="toggle-level" data-taglevel="4" href="#">&nbsp;++&nbsp;</a></li>
+		<li><a class="toggle-level" data-taglevel="6" href="#">&nbsp;+++&nbsp;</a></li>
+
+        <!--
 		<li><a class="toggle-level" data-taglevel="1" href="#"> 1 </a></li>
 		<li><a class="toggle-level" data-taglevel="2" href="#"> 2 </a></li>
 		<li><a class="toggle-level" data-taglevel="3" href="#"> 3 </a></li>
 		<li><a class="toggle-level" data-taglevel="4" href="#"> 4 </a></li>
 		<li><a class="toggle-level" data-taglevel="5" href="#"> 5 </a></li>
 		<li><a class="toggle-level" data-taglevel="6" href="#"> 6 </a></li>
-		
+		-->
 	</ul>
 	
 	
 	<div class="clear"></div>
-			
+	<div class="cloud-container">
 	{% for tag in tagcloud %}
-	
-	{% spurl base=request.get_full_path active_mquery="tags={{ tag.pk }}" as is_active %}
-
-	
-	{% spurl base=request.get_full_path trigger_mquery="tags={{ tag.pk }}" as tag_url %}
-	
-	<a href="{{ tag_url }}" class="tag{{ tag.weight }} {% if tag.hide_level > 0 %}tag-hidden{% endif %} level{{ tag.hide_level }} {% if is_active %} on{% endif %}" style="">{{ tag.name }}</a>
-	
-	{% if forloop.last %}
-	<!--
-	<div class="clear"></div>
-	-->
-	{% endif %}
-	
+        {% spurl base=request.get_full_path active_mquery="tags={{ tag.pk }}" as is_active %}
+        {% spurl base=request.get_full_path trigger_mquery="tags={{ tag.pk }}" as tag_url %}
+        <a href="{{ tag_url }}" class="tag{{ tag.weight }} {% if tag.hide_level > 0 %}tag-hidden{% endif %} level{{ tag.hide_level }} {% if is_active %} on{% endif %}" style="">{{ tag.name }}</a>
 	{% endfor %}
+    </div>
 		
 	<div class="clear"></div>
 	
