--- a/website/apps/profiles/templates/profiles/profile/_list_item_m.html
+++ b/website/apps/profiles/templates/profiles/profile/_list_item_m.html
@@ -22,7 +22,7 @@
 		<ul class="unstyled">
 			<li class="bold">
 				<a href="{{ item.get_absolute_url }}" class="permalink">{% firstof item.user.get_full_name|truncate_chars_inner:20 item.user.username|truncate_chars_inner:20 %}
-				{% if item.country %}({{ item.country }}){% endif %}
+				{% if item.country %}({{ item.country.iso2_code }}){% endif %}
 				{% topflop_for_object item %} </a>
 			</li>
 		
@@ -70,11 +70,13 @@
 		</div>
 		<div class="clear"></div>
 		<div class="inner_row bottom left">
-			<ul class="tags unstyled">
-				{% for tag in item.tags|slice:":7" %}
-				<li>{{ tag.name|truncate_chars_inner:12 }}</li>
-				{% endfor %}
-			</ul>
+
+            <ul class="tags unstyled">
+                {% for tag in item.tags|slice:":5" %}
+                    <li class="{% if tag.pk in active_tags %}active{% endif %}">{{ tag.name|truncate_chars_inner:10 }}</li>
+                {% endfor %}
+            </ul>
+
 		</div>
 	</div>
 
