--- a/website/site-static/sass/element/_style.sass
+++ b/website/site-static/sass/element/_style.sass
@@ -246,7 +246,8 @@ table.front td
         font-size: 26px
         line-height: 26px
         color: #00BB00
-        font-family: "quatro-slab"
+        //font-family: "quatro-slab"
+        font-family: "Times New Roman", Times, serif
         font-weight: 700
         font-style: italic
 
@@ -1593,9 +1594,19 @@ div.tagcloud.inline
   margin-bottom: 14px
   padding-bottom: 2px !important
   overflow: hidden
-    
+  position: relative
+
+  .cloud-container
+    width: 800px
+
   ul.tag-level
     float: right
+    margin: 0
+    padding: 0 4px 4px 4px
+    background: white
+    position: absolute
+    top: 0
+    right: 0
     a
       padding: 0
       margin: 0
