--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -333,7 +333,7 @@ section.comments.disqus
     border: 1px solid #bbb
     border: none
     padding: 0px
-    margin: 0 0 0 5px
+    margin: 0 0 -1px 5px
     &.spacer
       border: none
       border-top: 1px solid #F5F5F5
