--- a/website/site-static/css/wip.css
+++ b/website/site-static/css/wip.css
@@ -1420,7 +1420,7 @@ section.comments.disqus {
     border: 1px solid #bbbbbb;
     border: none;
     padding: 0px;
-    margin: 0 0 0 5px; }
+    margin: 0 0 -1px 5px; }
     .item_menu li.spacer {
       border: none;
       border-top: 1px solid whitesmoke;
