--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -123,7 +123,7 @@
 
 	
 	
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/apps/arating.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}arating/js/base.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}pusher/js/pusher.js"></script>{% endaddtoblock %}
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util.base.js"></script>{% endaddtoblock %}
