--- a/website/tools/zinnia/templates/admin/zinnia/widgets/quickpost.html
+++ b/website/tools/zinnia/templates/admin/zinnia/widgets/quickpost.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load url from future %}
 <div id="quickpost" class="module">
   <form method="post" action="{% url 'zinnia_entry_quick_post' %}">
     {% csrf_token %}
