--- a/website/tools/zinnia/templates/comments/zinnia/entry/form.html
+++ b/website/tools/zinnia/templates/comments/zinnia/entry/form.html
@@ -1,6 +1,7 @@
 {% load comments i18n %}
+{% load url from future %}
 <form action="{% comment_form_target %}" method="post" id="comment-form">
-  <div>{% csrf_token %}</div>
+  {% csrf_token %}
   <fieldset>
     <legend>{% trans "Post your comment" %}</legend>
     <input type="hidden" name="next" value="{% url 'zinnia_comment_success' %}"/>
