--- a/website/tools/zinnia/templates/comments/zinnia/entry/posted.html
+++ b/website/tools/zinnia/templates/comments/zinnia/entry/posted.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/base.html" %}
 {% load i18n %}
+{% load url from future %}
 
 {% block title %}{% trans "Thanks for your comment" %}{% endblock %}
 
