--- a/website/tools/zinnia/templates/zinnia/_entry_detail_base.html
+++ b/website/tools/zinnia/templates/zinnia/_entry_detail_base.html
@@ -1,4 +1,5 @@
 {% load comments i18n %}
+{% load url from future %}
 <div id="entry-{{ object.pk }}" class="hentry{% if object.featured %} featured{% endif %}">
   {% block entry-header %}
   <div class="entry-header">
