--- a/website/tools/zinnia/templates/zinnia/base.html
+++ b/website/tools/zinnia/templates/zinnia/base.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/skeleton.html" %}
 {% load zinnia_tags i18n %}
+{% load url from future %}
 
 {% block meta-keywords %}{% get_tags as entry_tags %}{{ entry_tags|join:", "}}{% endblock %}
 
