--- a/website/tools/zinnia/templates/zinnia/entry_archive.html
+++ b/website/tools/zinnia/templates/zinnia/entry_archive.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/entry_list.html" %}
 {% load i18n zinnia_tags %}
+{% load url from future %}
 
 {% block meta-description %}{% trans "Latest entries" %}{% endblock %}
 
