--- a/website/tools/zinnia/templates/zinnia/entry_archive_month.html
+++ b/website/tools/zinnia/templates/zinnia/entry_archive_month.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/entry_list.html" %}
 {% load i18n %}
+{% load url from future %}
 
 {% block meta-description %}{% trans "Archives" %} {{ month|date:"YEAR_MONTH_FORMAT" }}{% endblock %}
 
