--- a/website/tools/zinnia/templates/zinnia/entry_archive_year.html
+++ b/website/tools/zinnia/templates/zinnia/entry_archive_year.html
@@ -1,14 +1,15 @@
 {% extends "zinnia/entry_list.html" %}
 {% load i18n %}
+{% load url from future %}
 
-{% block meta-description %}{% trans "Archives" %} {{ year|date:"Y" }}{% endblock %}
+{% block meta-description %}{% trans "Archives" %} {{ year }}{% endblock %}
 
-{% block title %}{% trans "Archives" %} {{ year|date:"Y" }}{% endblock %}
+{% block title %}{% trans "Archives" %} {{ year }}{% endblock %}
 
-{% block body-class %}{{ block.super }} archive date year year-{{ year|date:"Y" }}{% endblock %}
+{% block body-class %}{{ block.super }} archive date year year-{{ year }}{% endblock %}
 
 {% block content-title %}
-<h1>{% trans "Archives" %} {{ year|date:"Y" }}</h1>
+<h1>{% trans "Archives" %} {{ year }}</h1>
 {% endblock %}
 
 {% block content-related %}
@@ -20,17 +21,4 @@
   </li>
   {% endfor %}
 </ul>
-
-{% if previous_year %}
-<h3>{% trans "Previous year" %}</h3>
-<p>
-  <a href="{% url 'zinnia_entry_archive_year' previous_year|date:"Y" %}" rel="archives">{{ previous_year|date:"Y" }}</a>
-</p>
-{% endif %}
-{% if next_year %}
-<h3>{% trans "Next year" %}</h3>
-<p>
-  <a href="{% url 'zinnia_entry_archive_year' next_year|date:"Y" %}" rel="archives">{{ next_year|date:"Y" }}</a>
-</p>
-{% endif %}
 {% endblock %}
