--- a/website/tools/zinnia/templates/zinnia/entry_detail_base.html
+++ b/website/tools/zinnia/templates/zinnia/entry_detail_base.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/base.html" %}
 {% load i18n comments zinnia_tags %}
+{% load url from future %}
 
 {% block title %}{{ object.title }}{% endblock %}
 
