--- a/website/tools/zinnia/templates/zinnia/tag_list.html
+++ b/website/tools/zinnia/templates/zinnia/tag_list.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/base.html" %}
 {% load i18n %}
+{% load url from future %}
 
 {% block meta-description %}{% trans "Tag list" %}{% endblock %}
 
