--- a/website/tools/zinnia/templates/zinnia/tags/tag_cloud.html
+++ b/website/tools/zinnia/templates/zinnia/tags/tag_cloud.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load url from future %}
 <ul class="{% if tags %}tags{% else %}no-tags{% endif %}">
   {% for tag in tags %}
   <li>
