--- a/website/templates/skeleton/footer.html
+++ b/website/templates/skeleton/footer.html
@@ -1,7 +1,4 @@
 <p>
-	© Digris AG 2012 |
-
-	Lessingstrasse 3,
-	CH-8002 Zurich,
-	Switzerland |
+	© openbroadcast.ch {% now "Y" %} |
+	Renggerstrasse 31, CH-8038 Zurich, Switzerland
 </p>
