cleaning profile views

--- a/website/site-static/sass/element/_style.sass
+++ b/website/site-static/sass/element/_style.sass
@@ -416,19 +416,19 @@ table.front td
       color: #333333
     &.plus
       /*|s|
-      background-image: url(/static/img/prototype/box_item_plus_on.png)
+      //background-image: url(/static/img/prototype/box_item_plus_on.png)
       background-repeat: no-repeat
   &.plus
     /*|s|
-    background-image: url(/static/img/prototype/box_item_plus.png)
+    //background-image: url(/static/img/prototype/box_item_plus.png)
     background-repeat: no-repeat
   &.minus
     /*|s|
-    background-image: url(/static/img/prototype/box_item_minus.png)
+    //background-image: url(/static/img/prototype/box_item_minus.png)
     background-repeat: no-repeat
   &.folder
     /*|s|
-    background-image: url(/static/img/prototype/box_item_folder.png)
+    //background-image: url(/static/img/prototype/box_item_folder.png)
     background-repeat: no-repeat
 
 .box.boxon
@@ -1181,6 +1181,8 @@ div
   border-top: 1px solid #aaa
   
 #footer
+
+  max-width: 830px
 
   div.subline
     
